[metadata]
name=geopmdpy
version = attr: geopmdpy.__version__

[options]
packages = geopmdpy
python_requires = >=3.6

[options.entry_points]
console_scripts =
  geopmd = geopmdpy.__main__:main
  geopmaccess = geopmdpy.access:main
  geopmsession = geopmdpy.session:main

[options.package_data]
geopmdpy =
    VERSION
